--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "stefan-utils"
+name = "stefan-dataframe-utils"
 version = "0.1.0"
 description = ""
 authors = ["Stefan Bader <baderstefan@gmx.de>"]
 packages = [
-    {include="stefan_utils", from="src/main/python/"}
+    {include="stefan_dataframe_utils", from="src/main/python/"}
 ]
 
 [tool.poetry.dependencies]
@@ -16,9 +16,9 @@ pyarrow = "^7.0.0"
 pytest = "^7.1.1"
 
 [tool.poetry.dev-dependencies]
-pylint = "^2.12.2"
-mypy = "^0.941"
-black = "^22.1.0"
+pylint = "^2.13.4"
+mypy = "^0.942"
+black = "^22.3.0"
 
 [tool.mypy]
 strict = "true"
